feat: implement service layer for attendees, bookings, and revenue - By An Nguyen